--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,26 @@
-services: 
-  frontend:  # Name of the service (could be 'web' or 'app' too)
-    container_name: frontend  # Explicitly names the container
-    
+services:
+  frontend: # Name of the service (could be 'web' or 'app' too)
+    container_name: frontend # Explicitly names the container
+
     build:
-      context: .  # Build context - where Docker looks for Dockerfile
-      target: builder  # Specifically targets the development stage in multi-stage Dockerfile
-    
-    restart: always  # Automatically restart if container stops
-    
-    command: npm run dev  # Overrides default CMD, runs development server
-    
+      context: . # Build context - where Docker looks for Dockerfile
+      target: base # Specifically targets the development stage in multi-stage Dockerfile
+
+    working_dir: /app
+
+    restart: always # Automatically restart if container stops
+
+    command: npm run dev # Overrides default CMD, runs development server
+
     environment:
-      - NODE_ENV=development  # Sets environment to development mode
+      - NODE_ENV=development # Sets environment to development mode
       # Windows-specific polling for file changes
       #- WATCHPACK_POLLING=true
-    
+
     volumes:
-      - .:/app  # Mount current directory to /app in container
-      - /app/node_modules  # Preserve node_modules volume
-      - /app/.next  # Preserve Next.js build cache
-    
+      - .:/app # Mount current directory to /app in container
+      # - /app/node_modules # Preserve node_modules volume
+      - /app/.next # Preserve Next.js build cache
+
     ports:
-      - 3000:3000  # Map container port to host port
+      - 3000:3000 # Map container port to host port
