--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -14,12 +14,6 @@ jobs:
       - name: checkout
         uses: actions/checkout@v4
 
-      - name: set up docker buildx
-        uses: docker/setup-buildx-action@v2
-        with:
-          driver-opts: image=moby/buildkit:latest
-        # replace "latest" with stable version if needed
-
       - name: login to docker hub
         if: github.event_name == 'push'
         uses: docker/login-action@v3
@@ -27,9 +21,38 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
+      - name: set up docker buildx
+        uses: docker/setup-buildx-action@v2
+        with:
+          driver-opts: image=moby/buildkit:latest
+        # replace "latest" with stable version if needed
+
       - name: build and push docker image
         if: github.event_name == 'push'
+        uses: docker/build-push-action@v6
+        with:
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/docker-test:latest
+
+  # testing with selenium
+  test:
+    runs-on: ubuntu-latest
+    needs: build # Ensures tests run after the build
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Start Selenium + Build service
+        run: docker compose -f docker-compose.yml up -d
+
+      - name: Build and run tests
         run: |
-          docker buildx build --platform linux/amd64,linux/arm64 -t docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/firstcoffee:latest . --push
+          docker build -t web-test -f Dockerfile.test .
+          docker run --rm --network=host web-test
+
+      - name: Stop Selenium services
+        if: always()
+        run: docker compose down
 
   # buildx doesn't store under local docker daemon image storage
