--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -44,7 +44,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Start Selenium + Build service
-        run: docker compose -f docker-compose.yml up -d
+        run: docker compose -f docker-compose.test.yml up -d
 
       - name: Build and run tests
         run: |
