shopify intergration working

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   app: # Name of the service (could be 'web' or 'app' too)
-    container_name: menupgv1.2 # Explicitly names the container
+    container_name: firstcoffeeV3 # Explicitly names the container
 
     build:
       context: . # Build context - where Docker looks for Dockerfile
@@ -12,8 +12,13 @@ services:
 
     command: npm run dev # Overrides default CMD, runs development server
 
+    env_file: 
+      - .env.local
+
     environment:
       - NODE_ENV=development # Sets environment to development mode
+      - SHOPIFY_STOREFRONT_ACCESS_TOKEN=${SHOPIFY_STOREFRONT_ACCESS_TOKEN}
+      - SHOPIFY_STORE_DOMAIN=${SHOPIFY_STORE_DOMAIN}
       # Windows-specific polling for file changes
       #- WATCHPACK_POLLING=true
 
