--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -34,6 +34,9 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/docker-test:latest
+          build-args: |
+            SHOPIFY_STORE_DOMAIN=${{ secrets.SHOPIFY_STORE_DOMAIN }}
+            SHOPIFY_STOREFRONT_ACCESS_TOKEN=${{ secrets.SHOPIFY_STOREFRONT_ACCESS_TOKEN }}
 
   # testing with selenium
   test:
@@ -43,13 +46,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: export environment variables
-        run: |
-          export ${ secrets.SHOPIFY_STORE_DOMAIN }
-          export ${ secrets.SHOPIFY_STOREFONT_ACCESS_TOKEN }
-
       - name: Start Selenium + Build service
         run: docker compose -f docker-compose.test.yml up -d
+        env:
+          SHOPIFY_STORE_DOMAIN: ${{ secrets.SHOPIFY_STORE_DOMAIN }}
+          SHOPIFY_STOREFRONT_ACCESS_TOKEN: ${{ secrets.SHOPIFY_STOREFRONT_ACCESS_TOKEN }}
 
       - name: Build and run tests
         run: |
