--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -34,9 +34,9 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/docker-test:latest
-          build-args: |
-            SHOPIFY_STORE_DOMAIN=${{ secrets.SHOPIFY_STORE_DOMAIN }}
-            SHOPIFY_STOREFRONT_ACCESS_TOKEN=${{ secrets.SHOPIFY_STOREFRONT_ACCESS_TOKEN }}
+          #build-args: |
+            #SHOPIFY_STORE_DOMAIN=${{ secrets.SHOPIFY_STORE_DOMAIN }}
+            #SHOPIFY_STOREFRONT_ACCESS_TOKEN=${{ secrets.SHOPIFY_STOREFRONT_ACCESS_TOKEN }}
 
   # testing with selenium
   test:
