--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -33,7 +33,8 @@ jobs:
         with:
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/firstimage:V1
+          #! UPDATE TAG NAME BEFORE PUSHING CHANGES /firstimage:Vx
+          tags: docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/firstimage:V2
           #build-args: |
             #SHOPIFY_STORE_DOMAIN=${{ secrets.SHOPIFY_STORE_DOMAIN }}
             #SHOPIFY_STOREFRONT_ACCESS_TOKEN=${{ secrets.SHOPIFY_STOREFRONT_ACCESS_TOKEN }}
