--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   app: # Name of the service (could be 'web' or 'app' too)
-    container_name: firstcoffeeV1 # Explicitly names the container
+    container_name: firstcontainer # Explicitly names the container
+    #! UPDATE TAG NAME BEFORE PUSHING CHANGES /firstimage:Vx
+    image: docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/firstimage:V2
 
     build:
       context: . # Build context - where Docker looks for Dockerfile
