--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -34,34 +34,35 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           #! UPDATE TAG NAME BEFORE PUSHING CHANGES /firstimage:Vx
-          tags: docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/firstimage:V2
-          #build-args: |
-            #SHOPIFY_STORE_DOMAIN=${{ secrets.SHOPIFY_STORE_DOMAIN }}
-            #SHOPIFY_STOREFRONT_ACCESS_TOKEN=${{ secrets.SHOPIFY_STOREFRONT_ACCESS_TOKEN }}
+          tags: docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/firstimage:V2.1
+          # build-args: |
+          #   SHOPIFY_STORE_DOMAIN=${{ secrets.SHOPIFY_STORE_DOMAIN }}
+          #   SHOPIFY_STOREFRONT_ACCESS_TOKEN=${{ secrets.SHOPIFY_STOREFRONT_ACCESS_TOKEN }}
 
   # testing with selenium
-  test:
-    runs-on: ubuntu-latest
-    needs: build # Ensures tests run after the build
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+  
+  # test:
+  #   runs-on: ubuntu-latest
+  #   needs: build # Ensures tests run after the build
+  #   steps:
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v4
 
-      - name: Create .env.local file for CI
-        run: |
-          echo "SHOPIFY_STORE_DOMAIN=${{ secrets.SHOPIFY_STORE_DOMAIN }}" > .env.local
-          echo "SHOPIFY_STOREFRONT_ACCESS_TOKEN=${{ secrets.SHOPIFY_STOREFRONT_ACCESS_TOKEN }}" >> .env.local
+  #     - name: Create .env.local file for CI
+  #       run: |
+  #         echo "SHOPIFY_STORE_DOMAIN=${{ secrets.SHOPIFY_STORE_DOMAIN }}" > .env.local
+  #         echo "SHOPIFY_STOREFRONT_ACCESS_TOKEN=${{ secrets.SHOPIFY_STOREFRONT_ACCESS_TOKEN }}" >> .env.local
 
-      - name: Start Selenium + Build service
-        run: docker compose -f docker-compose.test.yml up -d
+  #     - name: Start Selenium + Build service
+  #       run: docker compose -f docker-compose.test.yml up -d
 
-      - name: Build and run tests
-        run: |
-          docker build -t web-test -f Dockerfile.test .
-          docker run --rm --network=host web-test
+  #     - name: Build and run tests
+  #       run: |
+  #         docker build -t web-test -f Dockerfile.test .
+  #         docker run --rm --network=host web-test
 
-      - name: Stop Selenium services
-        if: always()
-        run: docker compose down
+  #     - name: Stop Selenium services
+  #       if: always()
+  #       run: docker compose down
 
   # buildx doesn't store under local docker daemon image storage
