--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -71,9 +71,16 @@ jobs:
         run: docker compose -f docker-compose.test.yml up -d
 
       - name: Build and run tests
+        env:
+          SHOPIFY_STORE_DOMAIN: ${{ secrets.SHOPIFY_STORE_DOMAIN }}
+          SHOPIFY_STOREFRONT_ACCESS_TOKEN: ${{ secrets.SHOPIFY_STOREFRONT_ACCESS_TOKEN }}
+          DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
         run: |
           docker build -t web-test -f Dockerfile.test .
-          docker run --rm --network=host web-test
+          docker run --rm --network=host \
+            -e SHOPIFY_STORE_DOMAIN=$SHOPIFY_STORE_DOMAIN \
+            -e SHOPIFY_STOREFRONT_ACCESS_TOKEN=$SHOPIFY_STOREFRONT_ACCESS_TOKEN \
+            web-test
 
       - name: Stop Selenium services
         if: always()
