--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  app: # Name of the service (could be 'web' or 'app' too)
+  app: # Name of the service (could be 'app' or 'web' too)
     container_name: firstcontainer # Explicitly names the container
     #! UPDATE TAG NAME BEFORE PUSHING CHANGES /firstimage:Vx
     image: docker.io/${DOCKER_HUB_USERNAME}/firstimage:V2.2
@@ -7,6 +7,9 @@ services:
     build:
       context: . # Build context - where Docker looks for Dockerfile
       target: base # Specifically targets the development stage in multi-stage Dockerfile
+      secrets:
+        - shopify_domain
+        - shopify_token
 
     working_dir: /app
 
@@ -29,3 +32,9 @@ services:
 
     ports:
       - 3000:3000 # Map container port to host port
+
+secrets:
+  shopify_domain:
+    file: ./secrets/shopify_domain.txt
+  shopify_token:
+    file: ./secrets/shopify_token.txt
