--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -29,13 +29,16 @@ COPY . .
 # Uncomment the following line in case you want to disable telemetry during the build.
 # ENV NEXT_TELEMETRY_DISABLED=1
 
+ARG SHOPIFY_STORE_DOMAIN
+ARG SHOPIFY_STOREFRONT_ACCESS_TOKEN
 ARG DOCKER_HUB_USERNAME
 
+ENV SHOPIFY_STORE_DOMAIN=$SHOPIFY_STORE_DOMAIN
+ENV SHOPIFY_STOREFRONT_ACCESS_TOKEN=$SHOPIFY_STOREFRONT_ACCESS_TOKEN
 ENV DOCKER_HUB_USERNAME=$DOCKER_HUB_USERNAME
 
 #! Both shopify ENVs & ARGs now processed via Docker Build Secret:
-RUN --mount=type=secret,id=shopify_domain \
-    --mount=type=secret,id=shopify_token \
+RUN  \
     if [ -f yarn.lock ]; then yarn run build; \
     elif [ -f package-lock.json ]; then npm run build; \
     elif [ -f pnpm-lock.yaml ]; then corepack enable pnpm && pnpm run build; \
