--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -20,7 +20,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
-      
+
       #! Using Docker Build Secrets:
       - name: Create temporary secret files
         run: |
@@ -68,13 +68,6 @@ jobs:
           echo "SHOPIFY_STOREFRONT_ACCESS_TOKEN=${{ secrets.SHOPIFY_STOREFRONT_ACCESS_TOKEN }}" >> .env.local
           echo "DOCKER_HUB_USERNAME=${{ secrets.DOCKER_HUB_USERNAME }}" >> .env.local
 
-      #! Using Docker Build Secrets:
-      - name: Create secret files for build
-        run: |
-          mkdir -p ./secrets
-          echo "${{ secrets.SHOPIFY_STORE_DOMAIN }}" > ./secrets/shopify_domain.txt
-          echo "${{ secrets.SHOPIFY_STOREFRONT_ACCESS_TOKEN }}" > ./secrets/shopify_token.txt
-
       - name: Debug environment variables
         run: |
           echo "Checking if env vars exist (should not show actual values):"
@@ -85,6 +78,8 @@ jobs:
           echo "Checking .env.local file:"
           cat .env.local | grep -v TOKEN | grep -v KEY
 
+        # Show file without exposing secrets
+
       - name: Start Selenium + Build service
         run: docker compose -f docker-compose.test.yml up -d
 
@@ -94,16 +89,14 @@ jobs:
           SHOPIFY_STOREFRONT_ACCESS_TOKEN: ${{ secrets.SHOPIFY_STOREFRONT_ACCESS_TOKEN }}
           DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
         run: |
-          docker build -t web-test --secret id=shopify_domain,src=./secrets/shopify_domain.txt --secret id=shopify_token,src=./secrets/shopify_token.txt -f Dockerfile.test .
+          docker build -t web-test -f Dockerfile.test .
           docker run --rm --network=host \
             -e SHOPIFY_STORE_DOMAIN=$SHOPIFY_STORE_DOMAIN \
             -e SHOPIFY_STOREFRONT_ACCESS_TOKEN=$SHOPIFY_STOREFRONT_ACCESS_TOKEN \
             web-test
 
-      - name: Stop Selenium services and clean up
+      - name: Stop Selenium services
         if: always()
-        run: |
-          docker compose down
-          rm -rf ./secrets
+        run: docker compose down
 
   # buildx doesn't store under local docker daemon image storage
