--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -62,11 +62,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Create .env.local file for CI
+      - name: Create .env.local & .env file for CI
         run: |
-          echo "SHOPIFY_STORE_DOMAIN=${{ secrets.SHOPIFY_STORE_DOMAIN }}" > .env.local
+          echo "SHOPIFY_STORE_DOMAIN=${{ secrets.SHOPIFY_STORE_DOMAIN }}" > .env.local 
           echo "SHOPIFY_STOREFRONT_ACCESS_TOKEN=${{ secrets.SHOPIFY_STOREFRONT_ACCESS_TOKEN }}" >> .env.local
           echo "DOCKER_HUB_USERNAME=${{ secrets.DOCKER_HUB_USERNAME }}" >> .env.local
+          echo .env.local > .env
 
       # Using Docker Build Secrets:
       - name: Create secret files for build
@@ -82,6 +83,8 @@ jobs:
           echo "Checking secrets:"
           cat ./secrets/shopify_domain.txt
           cat ./secrets/shopify_token.txt
+          echo "Checking .env file:"
+          cat .env
 
         # Show file without exposing secrets
 
