--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,9 @@ services:
     build:
       context: . # Build context - where Docker looks for Dockerfile
       target: base # Specifically targets the development stage in multi-stage Dockerfile
-      secrets:
-        - shopify_domain
-        - shopify_token
+      # secrets:
+      #   - shopify_domain
+      #   - shopify_token
 
     working_dir: /app
 
@@ -33,8 +33,8 @@ services:
     ports:
       - 3000:3000 # Map container port to host port
 
-secrets:
-  shopify_domain:
-    file: ./secrets/shopify_domain.txt
-  shopify_token:
-    file: ./secrets/shopify_token.txt
+# secrets:
+#   shopify_domain:
+#     file: ./secrets/shopify_domain.txt
+#   shopify_token:
+#     file: ./secrets/shopify_token.txt
