--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -48,9 +48,9 @@ jobs:
           # secrets: |
           #   shopify_domain=./secrets/shopify_domain.txt
           #   shopify_token=./secrets/shopify_token.txt
-      - name: Clean up secret files
-        if: always()
-        # run: rm -rf ./secrets
+      # - name: Clean up secret files
+      #   if: always()
+      #   run: rm -rf ./secrets
 
   # testing with selenium
 
@@ -91,7 +91,6 @@ jobs:
 
       - name: Stop Selenium services
         if: always()
-        run: |
-          docker compose down
+        run: docker compose down
 
   # buildx doesn't store under local docker daemon image storage
