--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.5",
+    "dotenv": "^16.4.7",
     "hamburger-react": "^2.5.2",
     "motion": "^12.4.10",
     "next": "15.1.6",
