--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -14,6 +14,14 @@ jobs:
       - name: checkout
         uses: actions/checkout@v4
 
+      - name: Extract version from package.json and set tag
+        id: set-version
+        run: |
+          VERSION=$(jq -r '.version' package.json)
+          DOCKER_TAG="v${VERSION}+${{ github.run_number }}"
+          echo "version=${DOCKER_TAG}" >> $GITHUB_OUTPUT
+          echo "Using version: ${DOCKER_TAG}"
+
       - name: login to docker hub
         if: github.event_name == 'push'
         uses: docker/login-action@v3
@@ -34,11 +42,7 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           #! UPDATE TAG NAME BEFORE PUSHING CHANGES /firstimage:Vx
-          tags: docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/firstimage:V3.0
-
-          #! Using Docker Build Secrets:
-          build-args: |
-            DOCKER_HUB_USERNAME=${{ secrets.DOCKER_HUB_USERNAME }}
+          tags: docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/firstimage:${{ steps.set-version.outputs.version }}
 
   # testing with selenium
 
