fixed format so docker can accept it

--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -18,7 +18,7 @@ jobs:
         id: set-version
         run: |
           VERSION=$(jq -r '.version' package.json)
-          DOCKER_TAG="v${VERSION}+${{ github.run_number }}"
+          DOCKER_TAG="v${VERSION}-${{ github.run_number }}"
           echo "version=${DOCKER_TAG}" >> $GITHUB_OUTPUT
           echo "Using version: ${DOCKER_TAG}"
 
