--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   app: # Name of the service (could be 'app' or 'web' too)
     container_name: firstcontainer # Explicitly names the container
     #! UPDATE TAG NAME BEFORE PUSHING CHANGES /firstimage:Vx
-    image: docker.io/${DOCKER_HUB_USERNAME}/firstimage:V3.0
+    image: docker.io/${DOCKER_HUB_USERNAME}/firstimage:v0.1.0
 
     build:
       context: . # Build context - where Docker looks for Dockerfile
